[gd_scene load_steps=5 format=3 uid="uid://1e4nko6lcvph"]

[ext_resource type="Script" path="res://Scripts/server_controller.gd" id="1_kps1r"]
[ext_resource type="Texture2D" uid="uid://6iycqx2crmbi" path="res://icon.svg" id="2_a3wmt"]
[ext_resource type="PackedScene" uid="uid://cw2g1ob4fqme4" path="res://UI/Buttons/farmer_button.tscn" id="3_c8twx"]
[ext_resource type="PackedScene" uid="uid://bfqhh3lb5mhb7" path="res://UI/Buttons/knight_button.tscn" id="4_1r8j8"]

[node name="ServerController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kps1r")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.372549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a3wmt")
expand_mode = 1
stretch_mode = 1

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -12.0
offset_right = -72.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -12.0
offset_right = 48.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -12.0
offset_right = 168.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="HoriTiles" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 44.0
offset_right = 56.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
text = "4"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 52.0
offset_right = -3.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
text = "Horizontal Tiles:"
horizontal_alignment = 2

[node name="VertTiles" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 92.0
offset_right = 56.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
text = "4"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 96.0
offset_right = -3.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
text = "Vertical Tiles:"
horizontal_alignment = 2

[node name="FarmerPiece" parent="." instance=ExtResource("3_c8twx")]
layout_mode = 1
offset_top = -164.0
offset_right = -24.0
offset_bottom = -68.0

[node name="KnightPiece" parent="." instance=ExtResource("4_1r8j8")]
layout_mode = 1
offset_left = 24.0
offset_top = -164.0
offset_right = 120.0
offset_bottom = -68.0

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
